  * Explicitly declare python dependencies in the python library modules (the
    setup.py doesn't provide these) and ubuntu-dev-tools itself.
  * dh_python2 doesn't generate a python dependency in ubuntu-dev-tools, now
    that it's scripts-only, so manually declare one.
  * Install pull-debian-source as python 3. It was ported, and doesn't work
    under python 2 any more. (LP: #1841127)

 -- Mattia Rizzolo <mattia@debian.org>  Fri, 23 Aug 2019 10:07:40 +0200

ubuntu-dev-tools (0.171) unstable; urgency=medium

  * Add an autopkgtest running the package tests.
    Currently it runs the tests directly over the sources, instead of the
    installed package.
  * ubuntutools/archive: Disable dsc signature verification for non-Debian.
    Ubuntu doesn't have a unified keyring of developers like Debian has, so
    it is not feasible to check for the dsc signatures.

 -- Mattia Rizzolo <mattia@debian.org>  Mon, 12 Aug 2019 13:42:31 +0200

ubuntu-dev-tools (0.170) unstable; urgency=medium

  [ Robie Basak ]
  * pull-debian-source:
    + Add a new --no-verify-signature option option, to download a source
      package without checking its signature.
    + Port to Python 3.  LP: #1700846

  [ Mattia Rizzolo ]
  * d/control:
    + Bump debhelper compat level to 12.
  * reverse-depends:
    + prevent crash when specifying a specific architecture.  Closes: #933018
  * ubuntutools/archive:
    + Default to checking signatures while pulling a .dsc.

 -- Mattia Rizzolo <mattia@debian.org>  Mon, 05 Aug 2019 13:28:23 +0200

ubuntu-dev-tools (0.169) unstable; urgency=medium

  [ Colin Watson ]
  * mk-sbuild:
    + Set personality=linux32 by default on armel and armhf as well.

  [ Sahid Orentino Ferdjaoui ]
  * reverse-depends:
    + New ability to find reverse-depends recursively, and print a tree.

  [ Mattia Rizzolo ]
  * d/control:
    + Add myself to uploaders.
    + Bump Standards-Version to 4.4.0, no changes needed.
