@@ -1,0 +1,2 @@
+/usr/bin
+/usr/share
