@@ -11,6 +11,7 @@ ubuntu-dev-tools (0.172) UNRELEASED; urgency=medium
     that it's scripts-only, so manually declare one.
   * Install pull-debian-source as python 3. It was ported, and doesn't work
     under python 2 any more. (LP: #1841127)
+  * Use dh_install to split the build into multiple binary packages.
 
  -- Mattia Rizzolo <mattia@debian.org>  Fri, 23 Aug 2019 10:07:40 +0200
 
